# ioracle-old

./: .gitignore  Cargo.toml  Rocket.toml  readme.md
.cargo/: config.toml
db/: ioracle.db
migrations/2020-08-22-095412_hexagrams/: up.sql
migrations/2020-08-22-095417_trigrams/: up.sql
migrations/2020-08-22-095421_settings/: up.sql
migrations/2020-08-22-095551_answers/: up.sql
migrations/2020-08-23-041517_bindings/: down.sql  up.sql
migrations/2020-10-15-053729_records/: up.sql
src/: config.rs  db.rs  errors.rs  iching.rs  lib.rs  main.rs  oracle.rs  pages.rs  tmp.rs  utils.rs  wires.rs
src/models/: binding.rs  hexagram.rs  iching.rs  mod.rs  record.rs  schema.rs  settings.rs  trigram.rs
src/oracle/: iching.rs  mod.rs  settings.rs  utils.rs  wires.rs
src/views/: context.rs  mod.rs  operator.rs  pages.rs  settings.rs
src/views/operator/: hexagrams.rs  mod.rs  simulation.rs  testing.rs  trigrams.rs
static/css/: custom.css
static/js/: custom.js  load.js  run.js  test.js
templates/: 404.html.tera  500.html.tera  answer.html.tera  edit_trigram.html.tera  hexagram_form.html.tera  hexagram_list.html.tera  hexagrams.html.tera  index.html.tera  layout.html.tera  operator.html.tera  run.html.tera  settings.html.tera  testing.html.tera  trigram_form.html.tera  trigram_list.html.tera  trigrams.html.tera
texts/: ik-23.txt
